final commit v2 added products

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <button class="category active-category" data-category="rubik">
             Rubik
           </button>
-          <button class="category" data-category="dados">Dados</button>
+          <button class="category" data-category="dice">Dados</button>
           <button class="category" data-category="ttrpg">Juegos de Rol</button>
           <button class="category" data-category="manga">Manga</button>
         </div>
