fixed mediaqueries and menu animation

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
     <!-- FOOTER -->
     <footer>
       <div class="links">
-        <a href="./pages/register.html" target="_blank">Register</a>
+        <a href="#top" target="_blank">Register</a>
         <img src="./img/LOGOV2.png" alt="altlogo" />
-        <a href="./pages/login.html" target="_blank">Login</a>
+        <a href="#top" target="_blank">Login</a>
       </div>
     </footer>
     <!-- FOOTER -->
